Changed the path of the js files into the folder 'my-js'

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="js/onepage.js"></script>
-	<script type="text/javascript" src="js/scroll.js"></script>
-	<script type="text/javascript" src="js/validation.js"></script>
+	<script type="text/javascript" src="js/my-js/scroll.js"></script>
+	<script type="text/javascript" src="js/my-js/validation.js"></script>
 
 	</html>
