--- a/index.html
+++ b/index.html
@@ -1,11 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
 	<!–[if gt IE 7]>
 	<link rel="stylesheet" type="text/CSS" href="style-for-IE7.css">
 	<![endif]–>
-
-	<script type="text/javascript" src="html5shiv-printshiv.js"></script>
-	<script type="text/javascript" src="html5shiv.js"></script>
 
 	<link rel="stylesheet" href="css/normalize.css">
 	<link rel="stylesheet" href="css/onepage.css">
@@ -38,11 +36,11 @@
 			<h2>Contacts</h2>
 			<form name="contactForm" method="POST">
 				<label>Name</label>
-				<input type="text" name="fname" class="check" id="name"	></input><p id="error-name" class="error"></p>
+				<input type="text" name="fname" class="check" id="name"	><p id="error-name" class="error"></p>
 				<label>E-mail</label>
-				<input type="email" name="femail" class="check"></input><p id="error-email" class="error"></p>
+				<input type="email" name="femail" class="check"><p id="error-email" class="error"></p>
 				<label>Subject</label>
-				<input type="text" name="fsub" class="check"></input><p id="error-subject" class="error"></p>
+				<input type="text" name="fsub" class="check"><p id="error-subject" class="error"></p>
 				<label>Message</label>
 				<textarea type="text" name="fmessage" class="check"></textarea><p id="error-message" class="error"></p>
 				<button type="button" id="submit">Submit</button>
@@ -82,14 +80,19 @@
 
 	</div>
 </div>
-
-</body>
-
 	
+	<script type="text/javascript" src="html5shiv-printshiv.js"></script>
+	<script type="text/javascript" src="html5shiv.js"></script>
 	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>
 	<script type="text/javascript" src="js/modernizr.js"></script>
 	<script type="text/javascript" src="js/onepage.js"></script>
 	<script type="text/javascript" src="js/my-js/scroll.js"></script>
 	<script type="text/javascript" src="js/my-js/validation.js"></script>
+
+</body>
+
+	
+	
+
 
 	</html>
