Edited the specrunner for jasmine

--- a/_SpecRunner.html
+++ b/_SpecRunner.html
@@ -21,10 +21,10 @@
   <script src=".grunt/grunt-contrib-jasmine/json2.js"></script>
   
   <script src=".grunt/grunt-contrib-jasmine/boot.js"></script>
-
-  <script src="bower_components/jquery/dist/jquery.js"></script>
-
+  
   <script src="js/spec/helpmeHelper.js"></script>
+  
+  <script src="js/my-js/scroll.js"></script>
   
   <script src="js/my-js/validation.js"></script>
   
