Edited the input tags

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
 			<h2>Contacts</h2>
 			<form name="contactForm" method="POST">
 				<label>Name</label>
-				<input type="text" name="fname" class="check" id="name"	><p id="error-name" class="error"></p>
+				<input type="text" name="name" class="check" id="name"	><p id="error-name" class="error"></p>
 				<label>E-mail</label>
-				<input type="email" name="femail" class="check"><p id="error-email" class="error"></p>
+				<input type="email" name="email" class="check"><p id="error-email" class="error"></p>
 				<label>Subject</label>
-				<input type="text" name="fsub" class="check"><p id="error-subject" class="error"></p>
+				<input type="text" name="subject" class="check"><p id="error-subject" class="error"></p>
 				<label>Message</label>
-				<textarea type="text" name="fmessage" class="check"></textarea><p id="error-message" class="error"></p>
+				<textarea type="text" name="message" class="check"></textarea><p id="error-message" class="error"></p>
 				<button type="button" id="submit">Submit</button>
 			</form>
 			<div id="contacts-info">
